--- a/style.css
+++ b/style.css
@@ -75,10 +75,11 @@ p:nth-of-type(even) {
 
 section#one {
     display: flex;
+    justify-content: flex-end;
     flex-direction: column;
-    align-content: center;
     align-items: center;
-    justify-content: center;
+    /* Bonus 1 */
+    flex-direction: column-reverse;
 }
 
 section#two {
@@ -86,6 +87,8 @@ section#two {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    /* Bonus 2 */
+    flex-direction: row-reverse;
 }
 
 section#three {
@@ -93,3 +96,4 @@ section#three {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: 100px;
 }
+
